# 2048_pyQt

./: .gitignore  LICENSE  README.md  config.py  game.py  main.py  pyproject.toml
src/: __init__.py  game.py
virtualenv/: pyvenv.cfg
virtualenv/Scripts/: activate  activate.bat  requirements.txt
